# Cluiche

./: .gitignore  .gitmodules  CLAUDE.md  CTempbuild_anim2d.txt  Directory.Build.props  Directory.Build.targets  IMPLEMENTATION_SUMMARY.md  README.md  build_diaapp.bat  build_release_output.txt  build_tests.bat  compile_test.bat  deps.json  mkdocs.yml  pipeline.toml  rename_diaapplication.ps1  setup-specs.sh  test_build.bat  winget.json  📚 View Docs.bat
.claude/: settings.json  settings.local.json  settings.local.template.json
Awesomium SDK/: updater.ini
Cluiche/: Cluiche.sln  pathStoreConfig.json
Cluiche/Tools/CLI/: .gitignore  .gitlab-ci.yml  mdk_prime_config.json  package.json  pyproject.toml  tasks.py
Cluiche/Tools/CLI/mdk_cli/: cli_main.py
Cluiche/Tools/CLI/mdk_cli/cli/: command.py  setup.py  show.py
Cluiche/Tools/CLI/mdk_cli/commands/: setup_cmd.py
Cluiche/Tools/CLI/mdk_cli/commands/setup/: executable_cmd.py
Cluiche/Tools/CLI/mdk_cli/templates/: command_decl.j2
Cluiche/Tools/CLI/mdk_cli/utils/: mdk_config.py  mdk_os.py  mdk_paths.py  shell_utils.py
Cluiche/Tools/CLI/tests/: test_blue_cli.py
Dia/DiaCLI/: .gitlab-ci.yml  DiaCLI.vcxproj  README.md  dia_cli_prime_config.json  pyproject.toml
Dia/DiaCLI/CommandRegistry/: CommandRegistry.cpp
Dia/DiaCLI/Help/: HelpSystem.h
Dia/DiaCLI/PythonBindings/: PythonBindings.h
Dia/DiaCLI/dia_cli/: __main__.py  cli_main.py
Dia/DiaCLI/dia_cli/cli/: api.py  asset.py  cli_prefixtest.py  command.py  editor_ui_test.py  env.py  fix.py  launch.py  mycommand.py  pipeline.py  run.py  setup.py  show.py  test.py
Dia/DiaCLI/dia_cli/commands/: editor_ui_test_cmd.py  mycommand_cmd.py  setup_cmd.py
Dia/DiaCLI/dia_cli/commands/asset/: _common_handler.py  _resolve.py  build_cmd.py  build_handler.py  config_loader.py  context.py  deploy_cmd.py  deploy_handler.py  group.py  handler.py  layout.py  manifest_generator.py  registry.py  runner.py  validate_cmd.py  validate_handler.py
Dia/DiaCLI/dia_cli/commands/asset/handlers/: __init__.py  audio.py  config.py  default.py  entity.py  folder.py  sprite.py  stage.py  texture.py  ui.py
Dia/DiaCLI/dia_cli/commands/command/: command_cmd.py
Dia/DiaCLI/dia_cli/commands/env/: claude_context_cmd.py  deps_restore_cmd.py  setup_orchestrator.py  toolchain_install_cmd.py  verify_orchestrator.py
Dia/DiaCLI/dia_cli/commands/env/docker/: deps_cmd.py  image_cmd.py  paths_cmd.py
Dia/DiaCLI/dia_cli/commands/fix/: fix_handler.py
Dia/DiaCLI/dia_cli/commands/pipeline/: deploy_runner.py  path_resolver.py  pipeline_config.py  pipeline_runner.py
Dia/DiaCLI/dia_cli/commands/pipeline/stages/: asset_build_stage.py  compile_code_stage.py  package_stage.py  proto_compile_stage.py
Dia/DiaCLI/dia_cli/commands/setup/: executable_cmd.py  setpath_cmd.py
Dia/DiaCLI/dia_cli/commands/test/: cli_runner.py  env_integration_runner.py  googletest_runner.py  ui_runner.py
Dia/DiaCLI/dia_cli/templates/: command.tree_template.json  command_decl.j2  command_impl.j2
Dia/DiaCLI/dia_cli/utils/: check_result.py  deps_restore.py  deps_verify.py  dia_cli_compression.py  dia_cli_config.py  dia_cli_decorators.py  dia_cli_os.py  dia_cli_output.py  dia_cli_paths.py  dia_cli_platform.py  dia_cli_template.py  dia_output.py  diaapi_bridge.py  node_resolve.py  repo_root.py  software_installer.py  submodule_verify.py  toolchain_verify.py
Dia/DiaCLI/tests/: test_asset_handler_registry.py  test_blue_cli.py  test_build_runner.py  test_built_in_handlers.py  test_cli_asset_commands.py  test_cli_fix_command.py  test_deploy_layout.py  test_dia_env.py  test_dia_output.py  test_dia_pipeline.py  test_dia_test_cli.py  test_dia_test_env_integration.py  test_dia_test_game_ui.py  test_dia_test_googletest.py  test_dia_test_ui.py  test_diaapi_bridge.py  test_editor_ui_test_cmd.py  test_integration.py  test_integration_asset_pipeline.py  test_manifest_generator.py  test_plugin_discovery.py
Tools/CLI/: README.md  mdk-cli.code-workspace  mdk_prime_config.json  pyproject.toml
Tools/CLI/mdk_cli/: cli_main.py
Tools/CLI/mdk_cli/cli/: command.py  software.py
Tools/CLI/mdk_cli/commands/command/: command_cmd.py
Tools/CLI/mdk_cli/commands/setup/: executable_cmd.py  setpath_cmd.py
Tools/CLI/mdk_cli/commands/software/: protoc_cmd.py
Tools/CLI/mdk_cli/templates/: command_impl.j2
Tools/CLI/mdk_cli/utils/: mdk_chmod.py  mdk_compression.py  mdk_decorators.py  mdk_paths.py  mdk_template.py  software_installer.py
(+2982 files in other folders)
