[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dia-cli"
version = "0.1.0"
description = "Dia CLI - Development tools for Dia engine"
authors = [ "Cluiche Team",]

[tool.black]
line-length = 120
target-version = [ "py311",]
include = "\\.pyi?$"
exclude = "(\n  /(\n      \\.eggs         # exclude a few common directories in the\n    | \\.git          # root of the project\n    | \\.hg\n    | \\.mypy_cache\n    | \\.pytest_cache\n    | \\.tox\n    | \\.venv\n    | _build\n    | buck-out\n    | build\n    | dist\n  )/\n  #| foo.py           # also separately exclude a file named foo.py in\n                     # the root of the project\n)\n"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.0"
toml = "^0.10.1"
loguru = "^0.5.1"
jinja2 = "^3.0.0"
python-box = "^7.0.0"
rich = ">=13.0"
anthropic = ">=0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-xdist = "^3.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"

[tool.poetry.scripts]
dia = "dia_cli.cli_main:main"

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit real machine state (deselect with: -m 'not integration')",
]

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = "C0330, C0326"
